--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "compression": "^1.7.1",
+    "i18next": "^17.0.12",
+    "i18next-xhr-backend": "^3.1.2",
     "polka": "next",
     "sirv": "^0.4.0"
   },
@@ -20,6 +22,7 @@
     "npm-run-all": "^4.1.5",
     "sapper": "^0.27.0",
     "svelte": "^3.0.0",
+    "svelte-i18n": "^1.1.2-beta",
     "svelte-loader": "^2.9.0",
     "webpack": "^4.7.0"
   }
